<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_topic"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_alignParentBottom="true"
    android:background="@color/bg_control_panner"
    android:padding="3dp" >

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:background="@drawable/btn1_selector"
        android:onClick="toPreTopic"
        android:text="@string/topic_preTopic"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_switch_answer_show"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:background="@drawable/btn1_selector"
        android:onClick="toSwitchAnswerShow"
        android:text="@string/topic_answer_show"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <ImageButton
        android:id="@+id/btn_seek"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:background="@drawable/btn1_selector"
        android:contentDescription="@string/tab_image_description"
        android:onClick="toSeek"
        android:src="@drawable/saturn__pop_menu_more" />

    <Button
        android:id="@+id/btn_topic_changeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:background="@drawable/btn1_selector"
        android:onClick="toChangeLabel"
        android:text="@string/topic_set_collect"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:background="@drawable/btn1_selector"
        android:onClick="toNextTopic"
        android:text="@string/topic_nextTopic"
        android:textColor="@color/black"
        android:textSize="12sp" />

</LinearLayout>