<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_share"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        layout="@layout/layout_title_style_4" />

    <ImageView
        android:id="@+id/iv_share_shot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/share_friend"
        android:layout_marginTop="10dp"
        android:orientation="vertical" />

    <RelativeLayout
        android:id="@+id/rl_share"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_marginTop="25dp" >

        <ImageView
            android:id="@+id/iv_tencent_weibo_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/tencent_weibo"
            android:onClick="sendToSinaWeibo"
            android:src="@drawable/tencent_weibo_title_logo" />

        <ImageView
            android:id="@+id/iv_sina_weibo_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/sina_weibo"
            android:onClick="sendToSinaWeibo"
            android:src="@drawable/sina_weibo_title_logo" />
    </RelativeLayout>

</LinearLayout>