<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/layout_title_style_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        layout="@layout/layout_title_style_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9" >

        <TextView
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.99"
            android:baselineAligned="false" >

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/detail_exam_times"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textIsSelectable="true"
                        android:textSize="40sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TableRow
                        android:id="@+id/tableRow1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_text_date" />

                        <TextView
                            android:id="@+id/detail_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textIsSelectable="true" />

                        <TextView
                            android:layout_width="30dp"
                            android:layout_height="match_parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_text_usetime" />

                        <TextView
                            android:id="@+id/detail_usetime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textIsSelectable="true" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_allaswer" />

                        <TextView
                            android:id="@+id/detail_sum_anserquestion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textIsSelectable="true" />

                        <TextView
                            android:layout_width="30dp"
                            android:layout_height="match_parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_right" />

                        <TextView
                            android:id="@+id/detail_sum_answer_right"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textIsSelectable="true" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_wrong" />

                        <TextView
                            android:id="@+id/detail_sum_answer_error"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textIsSelectable="true" />

                        <TextView
                            android:layout_width="30dp"
                            android:layout_height="match_parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_correct" />

                        <TextView
                            android:id="@+id/detail_accuracy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textIsSelectable="true" />
                    </TableRow>
                </TableLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_text_score"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/detail_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textIsSelectable="true"
                        android:textSize="40sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="20dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_classics_show_answer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:background="@drawable/btn3_selector"
        android:onClick="deleteRecord"
        android:text="@string/clear_record" />

</LinearLayout>